# godel-agency

./: .env.example  .gitignore  .pre-commit-config.yaml  00_00_00_INDEX.md  Cargo.toml  README.md  agency_structure_index.json  agent.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
10_00_SRC/: 10_00_00_INDEX.md  10_00_00_README.md
10_00_SRC/10_10_CORE/: data_ingestion.py  db_connector.py  local_sentiment.py  open_interpreter_config.py  pdiv_calculator.py  pdiv_d_volume.py  pdiv_i_engagement.py  pdiv_p_sentiment.py  pdiv_pipeline.py  sensemaker_engine.py  vertex_adapter.py
10_00_SRC/10_20_AGENTS/: agent_manifest.json  godel_agent.py  manifest.json  test_a2a.py  test_agent_security.py  test_governance.py  test_orchestration.py  test_patterns.py  test_sdlc_suite.py
10_00_SRC/10_30_COLLECTORS/: social_collector.py
20_00_DATA/: 20_00_00_INDEX.md
30_00_NOTEBOOKS/: 01_data_collection.ipynb  30_00_00_INDEX.md
40_00_DOCS/: 40_00_00_INDEX.md  agency_standards_sop.md  reporte_evolucion_godel_agency.md
50_00_VIGIL/: 50_00_00_INDEX.md  ANALYSIS_REPORT.md  create_notebooks.py
80_00_OUTPUTS/: 80_00_00_INDEX.md
90_00_ARCHIVE/: 90_00_00_INDEX.md
archive/: PROVENANCE.md  REPORTE_TECNICO_NAYARIT_SEM1.md
data/db/: README.md  (+3 more)
docs/: AGENTS.md  agency_standards_sop.md
platform/: README.md
reports/: GUIA_NOTEBOOKLM_SAIEL.md  agent_security_posture.html  architecture.md  git_plan.md  godel_agent_card.json
tests/: test_security.py
vigil/: .env.example  .gitignore  ANALYSIS_REPORT.md  README.md  requirements.txt  run_pipeline_test.py
(+246 files in other folders)
