[project]
name = "godel-agency"
version = "2.0.0"
description = "Godel — Sistema de Análisis de Inteligencia Electoral Local"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "fratfn"}
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "pysentimiento>=0.7.0",
    "transformers>=4.30.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.17.0",
    "great-expectations>=0.17.0",
    "faker>=19.0.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "cryptography>=41.0.0",
    "apify-client>=2.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "ollama>=0.1.0",
    "google-cloud-bigquery>=3.10.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-aiplatform>=1.25.0",
    "structlog>=23.0.0",
    "prometheus-client>=0.17.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "schedule>=1.2.0",
    "click>=8.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "jinja2>=3.1.0"
]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "src/tests",
    "src/agents",
]
